test/files/neg/t9094.scala
package object p {
  def free[A] = free.Free
}
package p.free {
  object Free
}
